minor alignment fix.
git-svn-id: file:///usr/src/myth/mythwww/www.mythtv.org@100 474a20e3-f028-0410-92a6-ca0ac9e30e78

--- a/htdocs/css/layout.css
+++ b/htdocs/css/layout.css
@@ -175,7 +175,7 @@
     #index_quicklinks {
         float:              right;
         width:              25%;
-        height:             130px;
+        height:             129px;
         padding:            3px 10px;
         border:             2px solid transparent;
         margin-bottom:      1em;
@@ -216,7 +216,7 @@
         float:              right;
         clear:              right;
         width:              25%;
-        height:             90px;
+        height:             91px;
         padding:            3px 10px;
         border:             2px solid transparent;
         text-align:         center;
